2006-01-30 [paul]	2.0.0

	version 2.0.0 released

2006-01-30 [paul]	1.9.100cvs200

	* manual/faq.xml
	* manual/gpl.xml
	* manual/intro.xml
	* manual/starting.xml
	* manual/sylpheed-claws-manual.xml
		fixes, additions

2006-01-29 [mones]	1.9.100cvs199

	* manual/account.xml
	* manual/advanced.xml
	* manual/glossary.xml
		Some typos fixed, added LDIF term to glossary
	* po/es.po
		Fixed leading plus symbol

2006-01-29 [paul]	1.9.100cvs198

	* po/fi.po
	* po/sk.po
		updated by Tommi Pirinen and Andrej Kacian

2006-01-29 [paul]	1.9.100cvs197

	* src/gtk/authors.h
		remove duplicates

2006-01-29 [paul]	1.9.100cvs196

	* AUTHORS
	* po/nl.po
	* src/gtk/authors.h
	* tools/claws.i18n.status.pl
		nl translation updated by Tim Dijkstra

2006-01-29 [paul]	1.9.100cvs195

	* po/sr.po
	* po/sv.po
		updated by Aleksandar Urosevic and Anders Troback

2006-01-28 [colin]	1.9.100cvs194

	* src/gtk/gtksourceprintjob.c
		Don't fiddle with PangoLayout when we
		have an image

2006-01-28 [paul]	1.9.100cvs193

	* AUTHORS
	* po/el.po
	* po/zh_CN.po
	* src/gtk/authors.h
	* tools/claws.i18n.status.pl
		updated translations submitted by Stavros Giannouris
		and Ralgh Young

2006-01-27 [cleroy]	1.9.100cvs192

	* src/summaryview.c
	* src/gtk/gtksourceprintjob.c
		Add image printing 
		(libgnomeprint only, of course)

2006-01-27 [paul]	1.9.100cvs191

	* po/fr.po
	* po/it.po
		updated by Fabien Vantard and Andrea Spadaccini

2006-01-26 [colin]	1.9.100cvs190

	* manual/Makefile.am
	* configure.ac
		Make building the manual optional 
		(--disable-manual)

2006-01-26 [paul]	1.9.100cvs189

	* manual/glossary.xml
	* manual/plugins.xml
		edited
	* po/en_GB.po
		updated

2006-01-26 [paul]	1.9.100cvs188

	* src/prefs_display_header.c
	* src/prefs_folder_column.c
	* src/prefs_msg_colors.c
	* src/prefs_summaries.c
	* src/prefs_summary_column.c
		HIGify

2006-01-25 [colin]	1.9.100cvs187

	* src/imap.c
		Don't allow moving/copying mails between
		queue/drafts and non-queue/drafts folders